syntax = 'proto3';

import "distributedkey.proto";
import "distributedsigner.proto";

message Output {
  int64 satoshis = 1;
  string script = 2;
}

message Input {
  string prev_tx_id = 1;
  int32 output_index = 2;
  int64 sequence_number = 3;
  string script = 4;
  string script_string = 5;
  Output output = 6;
}

message Tx {
  string hash = 1;
  int32 version = 2;
  repeated Input inputs = 3;
  repeated Output outputs = 4;
  int32 n_lock_time = 5;
  string change_script = 6;
  int32 change_index = 7;
}

message BitcoreTransaction {
  Tx tx = 1;
  string network = 2;
}

message BitcoreEntropyCommitment {
  repeated EntropyCommitment entropy_commitment = 1;
}

message BitcoreEntropyDecommitment {
  repeated EntropyDecommitment entropy_decommitment = 1;
}

message BitcoreSignature {
  repeated DistributedKey mapping = 1;
  repeated Signature signature = 2;
}

message BitcoreSignSession {
  repeated DistributedKey mapping = 1;
  repeated DistributedSigner signers = 2;
}

message BitcoreEntropyData {
  repeated EntropyData entropyData = 1;
}

message BitcorePartialSignature {
  repeated PartialSignature partial_signature = 1;
}

message BitcoreSignSessionShard {
  repeated DistributedKeyShard mapping = 1;
  repeated DistributedSignerShard signers = 2;
}